@@ -14,16 +14,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9, "3.10"]
-        django-version: [2.2, 3.0, 3.1, 3.2, 4.0]
+        python-version: [3.7, 3.8, 3.9, "3.10"]
+        django-version: [2.2, 3.0, 3.1, 3.2, 4.0, 4.1]
 
         exclude:
 
           - python-version: 3.7
             django-version: 4.0
 
-          - python-version: 3.6
-            django-version: 4.0
+          - python-version: 3.7
+            django-version: 4.1
 
     steps:
     - uses: actions/checkout@v2
