@@ -1,7 +1,6 @@
 [tox]
 envlist =
-    py{36}-django{22,30,31,32}
-    py{37,38,39,310}-django{22,30,31,32,40}
+    py{37,38,39,310}-django{22,30,31,32,40,41}
 
 install_command = pip install {opts} {packages}
 skip_missing_interpreters = True
@@ -17,3 +16,4 @@ deps =
     django31: Django>=3.1,<3.2
     django32: Django>=3.2,<3.3
     django40: Django>=4.0,<4.1
+    django40: Django>=4.1,<4.2
